testfx/errors/error_tests/edge_02_let_keyword.fx
// 测试: 使用 JS 的 let 关键字
let x = 10
println(x)
